RESOLVED FIXED203645
[LFC][IFC] Preserved segment breaks should produce ForcedLineBreak type of InlineItems
https://bugs.webkit.org/show_bug.cgi?id=203645
Summary [LFC][IFC] Preserved segment breaks should produce ForcedLineBreak type of In...
alan
Reported 2019-10-30 16:41:10 PDT
ssia
Attachments
Patch (8.62 KB, patch)
2019-10-30 16:53 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-30 16:41:40 PDT
alan
Comment 2 2019-10-30 16:53:27 PDT
WebKit Commit Bot
Comment 3 2019-10-31 07:51:41 PDT
Comment on attachment 382393 [details] Patch Clearing flags on attachment: 382393 Committed r251843: <https://trac.webkit.org/changeset/251843>
WebKit Commit Bot
Comment 4 2019-10-31 07:51:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.