Source/WebCore/layout/inlineformatting/InlineItem.h
@@ -36,17 +36,17 @@ namespace Layout {
 class InlineItem : public CanMakeWeakPtr<InlineItem> {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    enum class Type { Text, LineBreakBox, Box, Float, ContainerStart, ContainerEnd };
+    enum class Type { Text, ForcedLineBreak, Box, Float, ContainerStart, ContainerEnd };
     InlineItem(const Box& layoutBox, Type);
 
     Type type() const { return m_type; }
     const Box& layoutBox() const { return m_layoutBox; }
     const RenderStyle& style() const { return m_layoutBox.style(); }
 
-    bool isText() const;
+    bool isText() const { return type() == Type::Text; }
     bool isBox() const { return type() == Type::Box; }
     bool isFloat() const { return type() == Type::Float; }
-    bool isForcedLineBreak() const;
+    bool isForcedLineBreak() const { return type() == Type::ForcedLineBreak; }
     bool isContainerStart() const { return type() == Type::ContainerStart; }
     bool isContainerEnd() const { return type() == Type::ContainerEnd; }
 
@@ -54,12 +54,6 @@ private:
     const Box& m_layoutBox;
     const Type m_type;
 };
-
-inline InlineItem::InlineItem(const Box& layoutBox, Type type)
-    : m_layoutBox(layoutBox)
-    , m_type(type)
-{
-}
 
 #define SPECIALIZE_TYPE_TRAITS_INLINE_ITEM(ToValueTypeName, predicate) \
 SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::Layout::ToValueTypeName) \
